Moved classes, app settings with ini file, code optimization, managers impl

--- a/PowerProfiler/PowerProfiler.csproj
+++ b/PowerProfiler/PowerProfiler.csproj
@@ -6,6 +6,15 @@
         <RootNamespace>PowerProfiler</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PublishSingleFile>true</PublishSingleFile>
+        <PublishTrimmed>true</PublishTrimmed>
     </PropertyGroup>
+
+
+    <ItemGroup>
+        <PackageReference Include="ini-parser-netstandard" Version="2.5.2" />
+        <PackageReference Include="Serilog" Version="3.0.2-dev-02042" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.2.0-dev-00918" />
+    </ItemGroup>
 
 </Project>
