--- a/PowerProfiler.ini
+++ b/PowerProfiler.ini
@@ -1,9 +1,10 @@
 [General]
+CalculatePowerLimits=true
 SetPowerLimits=true
 RestartThrottleStop=true
 [Calculator]
-LongPowerBase=14647296
-ShortPowerBase=4423680
+LongPowerBase=DF8000
+ShortPowerBase=438000
 Step=8
 HexPrefix=0x00
 [Process]
