--- a/PowerProfiler/PowerProfiler.csproj
+++ b/PowerProfiler/PowerProfiler.csproj
@@ -8,6 +8,8 @@
         <Nullable>enable</Nullable>
         <PublishSingleFile>true</PublishSingleFile>
         <PublishTrimmed>true</PublishTrimmed>
+        <SelfContained>true</SelfContained>
+        <Version>1.1.0</Version>
     </PropertyGroup>
 
 
